// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:inline_image > icon 1`] = `
"<div class="paragraph">
<p><span class="icon"><img src="./images/icons/tags.png" alt="tags"></span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-no-icons 1`] = `
"<div class="paragraph">
<p><span class="icon">[tags&#93;</span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-with-dimensions 1`] = `
"<div class="paragraph">
<p><span class="icon"><img src="./images/icons/tags.png" alt="tags" width="35" height="25"></span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-with-float 1`] = `
"<div class="paragraph">
<p><span class="icon right"><img src="./images/icons/heart.png" alt="heart"></span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-with-link 1`] = `
"<div class="paragraph">
<p><span class="icon"><a class="image" href="http://rubygems.org/downloads/asciidoctor-1.5.2.gem"><img src="./images/icons/download.png" alt="download"></a></span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-with-role 1`] = `
"<div class="paragraph">
<p><span class="icon blue"><img src="./images/icons/tags.png" alt="tags"></span></p>
</div>"
`;

exports[`DocTest:inline_image > icon-with-title 1`] = `
"<div class="paragraph">
<p><span class="icon"><img src="./images/icons/heart.png" alt="heart" title="I &lt;3 Asciidoctor"></span></p>
</div>"
`;

exports[`DocTest:inline_image > image 1`] = `
"<div class="paragraph">
<p><span class="image"><img src="linux.svg" alt="linux"></span></p>
</div>"
`;

exports[`DocTest:inline_image > image-with-alt-text 1`] = `
"<div class="paragraph">
<p><span class="image"><img src="linux.svg" alt="Tux"></span></p>
</div>"
`;

exports[`DocTest:inline_image > image-with-dimensions 1`] = `
"<div class="paragraph">
<p><span class="image"><img src="linux.svg" alt="Tux" width="25" height="35"></span></p>
</div>"
`;

exports[`DocTest:inline_image > image-with-float 1`] = `
"<div class="paragraph">
<p><span class="image right"><img src="linux.svg" alt="linux"></span></p>
</div>"
`;

exports[`DocTest:inline_image > image-with-link 1`] = `
"<div class="paragraph">
<p><span class="image"><a class="image" href="http://inkscape.org/doc/examples/tux.svg"><img src="linux.svg" alt="linux"></a></span></p>
</div>"
`;

exports[`DocTest:inline_image > image-with-role 1`] = `
"<div class="paragraph">
<p><span class="image black"><img src="linux.svg" alt="linux"></span></p>
</div>"
`;
